added a new skill Linux to the index html file

--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
                         </div>
                     </div>
                     <div class="skill-bar">
+                        <p>Linux</p>
+                        <div class="bar"> 
+                            <div class="junit-bar"> </div>
+                        </div>
+                    </div>
+                    <div class="skill-bar">
                         <p>Javascript & Webprogramming</p>
                         <div class="bar"> 
                             <div class="javascript-bar"> </div>
