la til nye skills: linux, git, js og spring boot i index html filen

--- a/index.html
+++ b/index.html
@@ -190,13 +190,25 @@
                     <div class="skill-bar">
                         <p>Linux</p>
                         <div class="bar"> 
-                            <div class="junit-bar"> </div>
+                            <div class="linux-bar"> </div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <p>Javascript & Webprogramming</p>
+                        <p>Git & Github</p>
+                        <div class="bar"> 
+                            <div class="git-bar"> </div>
+                        </div>
+                    </div>
+                    <div class="skill-bar">
+                        <p>Javascript</p>
                         <div class="bar"> 
                             <div class="javascript-bar"> </div>
+                        </div>
+                    </div>
+                    <div class="skill-bar">
+                        <p>Spring Boot</p>
+                        <div class="bar"> 
+                            <div class="spring-bar"> </div>
                         </div>
                     </div>
                     <div class="skill-bar">
