endret på hyper linken til cv ikonet

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <li><a href="mailto: selma.krgz@outlook.com" target="_blank"><img src="Icons/mailIcon.png"></a></li>
                                 <li><a href="https://www.linkedin.com/in/selma-karagøz-083a09249" target="_blank"><img src="Icons/linkedinIcon.png"></a></li>
                                 <li><a href="https://github.com/Selmakrgzz" target="_blank"><img src="Icons/githubIcon.png"></a></li>
-                                <li class="cvIcon"><a href="file:///C:/Users/Bruker/Desktop/SelfWeb/SelmaKarag%C3%B8zCV.pdf" target="_blank">CV</a></li>
+                                <li class="cvIcon"><a href="SelmaKaragøzCV.pdf" target="_blank">CV</a></li>
                             </ul>
                         </div>
                     </div>
