har lagt til en scroll-up pil for å gjøre det enklere å komme tilbake til hjemme siden, har lagt til prosent visning av de ulike skillsene, også har jeg lagt til en ekstra github knapp for prosjekt visningene slik at man kan sjekke ut koden på github

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <a target="_blank" href="https://icons8.com/icon/8808/linkedin">LinkedIn</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
     blaze PNG Designed By vector1st from https://pngtree.com/freepng/space-rocket-launch-mission_5314837.html?sol=downref&id=bef
     <a target="_blank" href="https://icons8.com/icon/WV326xpsBMyb/phone">Phone</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>  
-    <a target="_blank" href="https://icons8.com/icon/2963/globe">Globe</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+    <a target="_blank" href="https://icons8.com/icon/2963/globe">Globe</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    <a target="_blank" href="https://icons8.com/icon/VvHX2g7RjHCT/up">Up</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
     <title>Selma Karagøz</title>
@@ -48,6 +49,7 @@
     </div>
     <div class="scroll-adjust" id="home"></div>
     <div class="emty"></div>
+    <a href="#home"><div class="scroll-up"><img src="Icons/arrowUpIcon.png"></div></a>
 
         <section id="homePage">
             <div class="home-container">
@@ -173,54 +175,63 @@
                         <p>Java</p>
                         <div class="bar"> 
                             <div class="java-bar"> </div>
+                            <div class="percentage">50%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>Python</p>
                         <div class="bar"> 
                             <div class="python-bar"> </div>
+                            <div class="percentage">30%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>JUnit</p>
                         <div class="bar"> 
                             <div class="junit-bar"> </div>
+                            <div class="percentage">50%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>Linux</p>
                         <div class="bar"> 
                             <div class="linux-bar"> </div>
+                            <div class="percentage">40%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>Git & Github</p>
                         <div class="bar"> 
                             <div class="git-bar"> </div>
+                            <div class="percentage">30%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>Javascript</p>
                         <div class="bar"> 
                             <div class="javascript-bar"> </div>
+                            <div class="percentage">40%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>Spring Boot</p>
                         <div class="bar"> 
                             <div class="spring-bar"> </div>
+                            <div class="percentage">40%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>SQL & Databases</p>
                         <div class="bar"> 
                             <div class="sql-bar"> </div>
+                            <div class="percentage">60%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>HTML & CSS</p>
                         <div class="bar"> 
                             <div class="html-bar"> </div>
+                            <div class="percentage">85%</div>
                         </div>
                     </div>
                   </div>
@@ -231,18 +242,21 @@
                         <p>Norwegian</p>
                         <div class="bar"> 
                             <div class="norw-bar"> </div>
+                            <div class="percentage">100%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>English</p>
                         <div class="bar"> 
                             <div class="eng-bar"> </div>
+                            <div class="percentage">80%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
                         <p>Turkish</p>
                         <div class="bar"> 
                             <div class="tur-bar"> </div>
+                            <div class="percentage">100%</div>
                         </div>
                     </div>
                   </div>
@@ -265,6 +279,7 @@
                                 This project is a dynamic basketball scoreboard that allows users to display scores in real-time. It was created using HTML, CSS, and JavaScript. Just a simple little project where I experimented how to use Javascript.                            </div>
                             <div class="project-row-2">
                                 <a href="projects/Basketball - Scoreboard/basketball_Scoreboard.html"><button>Take a look!</button></a>
+                                <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Prosjekter/Basketball%20-%20Scoreboard"><button>Github</button></a>
                             </div>
                         </div>
                         <div class="project-box">
@@ -274,6 +289,7 @@
                                 Developed with HTML, CSS, and JavaScript, the People Counter project is designed to count and display the number of individuals. This application is useful in various scenarios, offering a simple yet effective way to monitor and visualize crowd sizes.                            </div>
                             <div class="project-row-2">
                                 <a href="projects/Counter/counter.html"><button>Take a look!</button></a>
+                                <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Prosjekter/counter"><button>Github</button></a>
                             </div>
                         </div>
                     </div>
@@ -285,6 +301,7 @@
                                 As part of a mandatory assignment in web programming, this comprehensive project utilizes HTML, Bootstrap, JavaScript, and Spring Boot for both front-end and back-end development. The application provides an online platform for users to reserve movie tickets. Please note that due to the project's deployment constraints, the backend features  (Java, JPA, etc) are currently inactive. Nonetheless, the inclusion of Spring Boot reflects the full-stack capabilities demonstrated in this assignment.                            </div>
                             <div class="project-row-2">
                                 <a href="projects/KinoBestilling/src/main/resources/static/index.html"><button>Take a look!</button></a>
+                                <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Oblig3/Oblig3"><button>Github</button></a>
                             </div>
                         </div>
                         <div class="project-box">
@@ -294,6 +311,7 @@
                                 Collaboratively created using HTML, CSS, and JavaScript, this project was part of a group exam for the Web Development course. Achieving a B grade, the project showcases proficiency in web development skills. The use of various technologies demonstrates a comprehensive understanding of front-end development, resulting in a well-executed and functional web application.                            </div>
                             <div class="project-row-2">
                                 <a href="projects/Exam-Web-Final-2022/Web-prosjekt/index.html"><button>Take a look!</button></a>
+                                <a href="https://github.com/Selmakrgzz/DATA1200-Webutvikling-og-inkluderende-design/tree/main/Exam-Web-Final-2022/Web-prosjekt"><button>Github</button></a>
                             </div>
                         </div>
                     </div>
