Added a new box for upcoming project

--- a/index.html
+++ b/index.html
@@ -274,22 +274,24 @@
                     <div class="row-md-2">
                         <div class="project-box">
                             <div class="project-row-1">
-                                <img  class="project-img" src="Images/web1.png">
-                                <h3>Basketball Scoreboard</h3>
-                                This project is a dynamic basketball scoreboard that allows users to display scores in real-time. It was created using HTML, CSS, and JavaScript. Just a simple little project where I experimented how to use Javascript.                            </div>
+                                <img  class="project-img" src="Images/web5.png">
+                                <h3>Calculator</h3>
+                                I'm currently in the process of developing a Python Flask Calculator. This project aims to provide an interactive platform for basic math operations. Stay tuned as I continue to experiment and refine the code to bring you a seamless calculator experience. <br><br> You can check out the latest developments on GitHub! 
+                            </div>
                             <div class="project-row-2">
-                                <a href="projects/Basketball - Scoreboard/basketball_Scoreboard.html"><button>Take a look!</button></a>
-                                <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Prosjekter/Basketball%20-%20Scoreboard"><button>Github</button></a>
+                                <a href="#projects"><button>Coming Soon!</button></a>
+                                <a href="https://github.com/Selmakrgzz/Calculator"><button>Github</button></a>
                             </div>
                         </div>
                         <div class="project-box">
                             <div class="project-row-1">
-                                <img  class="project-img" src="Images/web2.png">
-                                <h3>People Counter</h3>
-                                Developed with HTML, CSS, and JavaScript, the People Counter project is designed to count and display the number of individuals. This application is useful in various scenarios, offering a simple yet effective way to monitor and visualize crowd sizes.                            </div>
+                                <img  class="project-img" src="Images/web1.png">
+                                <h3>Basketball Scoreboard</h3>
+                                This project is a dynamic basketball scoreboard that allows users to display scores in real-time. It was created using HTML, CSS, and JavaScript. Just a simple little project where I experimented how to use Javascript.
+                            </div>
                             <div class="project-row-2">
-                                <a href="projects/Counter/counter.html"><button>Take a look!</button></a>
-                                <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Prosjekter/counter"><button>Github</button></a>
+                                <a href="projects/Basketball - Scoreboard/basketball_Scoreboard.html"><button>Take a look!</button></a>
+                                <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Prosjekter/Basketball%20-%20Scoreboard"><button>Github</button></a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +300,8 @@
                             <div class="project-row-1">
                                 <img  class="project-img" src="Images/web4.png">
                                 <h3>Cinema Ticket Reservation</h3>
-                                As part of a mandatory assignment in web programming, this comprehensive project utilizes HTML, Bootstrap, JavaScript, and Spring Boot for both front-end and back-end development. The application provides an online platform for users to reserve movie tickets. Please note that due to the project's deployment constraints, the backend features  (Java, JPA, etc) are currently inactive. Nonetheless, the inclusion of Spring Boot reflects the full-stack capabilities demonstrated in this assignment.                            </div>
+                                As part of a mandatory assignment in web programming, this comprehensive project utilizes HTML, Bootstrap, JavaScript, and Spring Boot for both front-end and back-end development. The application provides an online platform for users to reserve movie tickets. Please note that due to the project's deployment constraints, the backend features  (Java, JPA, etc) are currently inactive. Nonetheless, the inclusion of Spring Boot reflects the full-stack capabilities demonstrated in this assignment.
+                            </div>
                             <div class="project-row-2">
                                 <a href="projects/KinoBestilling/src/main/resources/static/index.html"><button>Take a look!</button></a>
                                 <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Oblig3/Oblig3"><button>Github</button></a>
@@ -306,12 +309,36 @@
                         </div>
                         <div class="project-box">
                             <div class="project-row-1">
+                                <img  class="project-img" src="Images/web2.png">
+                                <h3>People Counter</h3>
+                                Developed with HTML, CSS, and JavaScript, the People Counter project is designed to count and display the number of individuals. This application is useful in various scenarios, offering a simple yet effective way to monitor and visualize crowd sizes.
+                            </div>
+                            <div class="project-row-2">
+                                <a href="projects/Counter/counter.html"><button>Take a look!</button></a>
+                                <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Prosjekter/counter"><button>Github</button></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-md-4">
+                        <div class="project-box">
+                            <div class="project-row-1">
                                 <img  class="project-img" src="Images/web3.png">
                                 <h3>Web Development Exam</h3>
-                                Collaboratively created using HTML, CSS, and JavaScript, this project was part of a group exam for the Web Development course. Achieving a B grade, the project showcases proficiency in web development skills. The use of various technologies demonstrates a comprehensive understanding of front-end development, resulting in a well-executed and functional web application.                            </div>
+                                Collaboratively created using HTML, CSS, and JavaScript, this project was part of a group exam for the Web Development course. Achieving a B grade, the project showcases proficiency in web development skills. The use of various technologies demonstrates a comprehensive understanding of front-end development, resulting in a well-executed and functional web application.
+                            </div>
                             <div class="project-row-2">
                                 <a href="projects/Exam-Web-Final-2022/Web-prosjekt/index.html"><button>Take a look!</button></a>
                                 <a href="https://github.com/Selmakrgzz/DATA1200-Webutvikling-og-inkluderende-design/tree/main/Exam-Web-Final-2022/Web-prosjekt"><button>Github</button></a>
+                            </div>
+                        </div>
+                        <div class="project-box" style="visibility: hidden;">
+                            <div class="project-row-1">
+                                <img  class="project-img" src="">
+                                <h3></h3>
+                                </div>
+                            <div class="project-row-2">
+                                <a href=""><button>Take a look!</button></a>
+                                <a href=""><button>Github</button></a>
                             </div>
                         </div>
                     </div>
