Added an new section to experiences

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
                     <div class="col-5"> </div>
                     <div class="col-6">
                         <div class="exp-box">
+                            <h3>Open Day at OsloMet</h3>
+                            <p class="uni-txt">Oslo Metropolitian University</p>
+                            <p class="exp-date">7 March 2024</p>
+                            <p>Showcasing the Software Engineering program during the open day by providing brief and informative insights. Sharing personal experiences and academic enthusiasm to inspire potential students. The goal is to generate excitement and provide a realistic portrayal of the study program for interested visitors.</p>
+                        </div>
+                        <div class="exp-box">
                             <h3>Student Assistent in Orakeltjenesten</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
                             <p class="exp-date">Jan 2024 - Jun 2024</p>
