--- a/index.html
+++ b/index.html
@@ -280,12 +280,11 @@
                     <div class="row-md-2">
                         <div class="project-box">
                             <div class="project-row-1">
-                                <img  class="project-img" src="Images/web5.png">
+                                <img  class="project-img" src="Images/web6.png">
                                 <h3>Calculator</h3>
-                                I'm currently in the process of developing a Python Flask Calculator. This project aims to provide an interactive platform for basic math operations. Stay tuned as I continue to experiment and refine the code to bring you a seamless calculator experience. <br><br> You can check out the latest developments on GitHub! 
-                            </div>
+                                The project is a calculator application developed using Flask as the web framework. It incorporates Python for backend calculations, HTML for frontend structure, CSS for styling, and JavaScript for interactive features. Users can perform basic mathematical operations such as addition, subtraction, multiplication, division, and modulo. The calculator provides a user-friendly interface where numbers can be input via button clicks, and calculations can be executed instantly with the click of a button.                            </div>
                             <div class="project-row-2">
-                                <a href="#projects"><button>Coming Soon!</button></a>
+                                <a href="https://calculatorapp-3ufs.onrender.com"><button>Take a look!</button></a>
                                 <a href="https://github.com/Selmakrgzz/Calculator"><button>Github</button></a>
                             </div>
                         </div>
