--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             <div class="project-row-1">
                                 <img  class="project-img" src="Images/web6.png">
                                 <h3>Calculator</h3>
-                                The project is a calculator application developed using Flask as the web framework. It incorporates Python for backend calculations, HTML for frontend structure, CSS for styling, and JavaScript for interactive features. Users can perform basic mathematical operations such as addition, subtraction, multiplication, division, and modulo. The calculator provides a user-friendly interface where numbers can be input via button clicks, and calculations can be executed instantly with the click of a button.                            </div>
+                                The project is a calculator application developed using Flask as the web framework. It incorporates Python for backend calculations, HTML for frontend structure, CSS for styling, and JavaScript for interactive features. Users can perform basic mathematical operations such as addition, subtraction, multiplication, division, and modulo. The calculator provides a user-friendly interface where numbers can be input via button clicks, and calculations can be executed instantly with the click of a button.<br> The page may take some time to load due to server resources used for hosting.                            </div>
                             <div class="project-row-2">
                                 <a href="https://calculatorapp-3ufs.onrender.com"><button>Take a look!</button></a>
                                 <a href="https://github.com/Selmakrgzz/Calculator"><button>Github</button></a>
