added new skill

--- a/index.html
+++ b/index.html
@@ -227,6 +227,13 @@
                         </div>
                     </div>
                     <div class="skill-bar">
+                        <p>Flask</p>
+                        <div class="bar"> 
+                            <div class="flask-bar"> </div>
+                            <div class="percentage">30%</div>
+                        </div>
+                    </div>
+                    <div class="skill-bar">
                         <p>SQL & Databases</p>
                         <div class="bar"> 
                             <div class="sql-bar"> </div>
