Added new experiences and voluntary work field. Updated some of the position descriptions

--- a/index.html
+++ b/index.html
@@ -134,10 +134,18 @@
                 <div class="row-1">
                     <h2>Experiences</h2>
                 </div>
-    
+                <div class="exp-title-box">
+                    <h3>Work Experience</h3>
+                </div>
                 <div class="row-2">
                     <div class="col-5"> </div>
                     <div class="col-6">
+                        <div class="exp-box">
+                            <h3>Student Assistent in Systems Development</h3>
+                            <p class="uni-txt">Oslo Metropolitian University</p>
+                            <p class="exp-date">Aug 2024 - Nov 2024</p>
+                            <p>In this Systems Development course, students develop skills in defining system properties, managing development processes, and understanding the complexities of interactions between software systems and users. The course covers both modern (including agile) and traditional software engineering methods.<br> As a student assistant, I will be guiding weekly assignment reviews, supporting students during practice sessions, correcting obligatory assignments and contribute to the overall progress of the course.</p>
+                        </div>
                         <div class="exp-box">
                             <h3>Open Day at OsloMet</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
@@ -147,20 +155,34 @@
                         <div class="exp-box">
                             <h3>Student Assistent in Orakeltjenesten</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
-                            <p class="exp-date">Jan 2024 - Jun 2024</p>
-                            <p>Guided technology students during practice sessions. Assisting mainly in <i>Mathematics 1000</i>, <i>Webprogramming</i>, <i>Databases</i> and other subjects as well.</p>
+                            <p class="exp-date">Jan 2024 - Present</p>
+                            <p>Orakeltjenesten is a support service provided by the Department of IT, where second- and third-year students from our bachelor's programs are hired as student assistants each semester.<br> Their primary role is to support and guide first-year students throughout their initial year of study. This includes providing assistance and guidance to technology students during practice sessions, mainly focusing on first-year students but also extending help to second- and third-year students as needed.</p>
                         </div>
                         <div class="exp-box">
                             <h3>Student Assistent in Discrete Mathematics</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
                             <p class="exp-date">Aug 2023 - Nov 2023</p>
-                            <p>Assisted fellow students and teachers throughout the course. Guided students during practice sessions and contributed to the overall progress of the subject. As well as correcting obligatory assignments.</p>
+                            <p>Discrete Mathematics is an essential course in all computer science programs, often referred to as computer mathematics. It plays a vital role in enhancing students' programming skills and understanding of computer technology problems.<br> As a student assistant, I supported both students and teachers by guiding practice sessions, correcting obligatory assignments, and contributing to the overall progress of the course.</p>
                         </div>
                         <div class="exp-box">
                             <h3>Student Assistent in Technology and Society for Programmers</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
                             <p class="exp-date">Aug 2023 - Nov 2023</p>
-                            <p>Assisted fellow students and teachers throughout the course. Guided students during practice sessions and contributed to the overall progress of the subject. As well as correcting obligatory assignments.</p>
+                            <p>Technology and Society for Programmers explores the impact of digital technology on work and society, covering topics like social media, digital governance, and eHealth. The course emphasizes understanding both the benefits and limitations of technology.<br> As a student assistant, I supported students and instructors by guiding practice sessions, facilitating discussions, and helping students communicate their understanding of key concepts.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="exp-title-box">
+                    <h3>Voluntary Experience</h3>
+                </div>
+                <div class="row-2">
+                    <div class="col-5"> </div>
+                    <div class="col-6">
+                        <div class="exp-box">
+                            <h3>Communication Chair</h3>
+                            <p class="uni-txt">Women in Aviation International (WAI), Scandinavia Chapter</p>
+                            <p class="exp-date">Jun 202 - Present</p>
+                            <p>Women in Aviation International is a non-profit organization dedicated to supporting and advancing women across all aviation career fields. Established in the USA in 1990 and formally incorporated in 1994, the Scandinavia Chapter began in 2019 and was restructured in 2020. <br>As Communication Chair, my role involves managing and enhancing the chapter’s communication strategies.</p>
                         </div>
                     </div>
                 </div>
