Changed the experiences texts a little

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                     <div class="col-5"> </div>
                     <div class="col-6">
                         <div class="exp-box">
-                            <h3>Teaching  Assistent in Systems Development</h3>
+                            <h3>Teacher  Assistent in Systems Development</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
                             <p class="exp-date">Aug 2024 - Nov 2024</p>
-                            <p>In this Systems Development course, students develop skills in defining system properties, managing development processes, and understanding the complexities of interactions between software systems and users. The course covers both modern (including agile) and traditional software engineering methods.<br> As a teaching assistant, I will be guiding weekly assignment reviews, supporting students during practice sessions, correcting obligatory assignments and contribute to the overall progress of the course.</p>
+                            <p>In this Systems Development course, students develop skills in defining system properties, managing development processes, and understanding the complexities of interactions between software systems and users. The course covers both modern (including agile) and traditional software engineering methods.<br> As a Teacher assistant, I will be guiding weekly assignment reviews, supporting students during practice sessions, correcting obligatory assignments and contribute to the overall progress of the course.</p>
                         </div>
                         <div class="exp-box">
                             <h3>Open Day at OsloMet</h3>
@@ -159,16 +159,16 @@
                             <p>Orakeltjenesten is a support service provided by the Department of IT, where second- and third-year students from our bachelor's programs are hired as student assistants each semester.<br> Their primary role is to support and guide first-year students throughout their initial year of study. This includes providing assistance and guidance to technology students during practice sessions, mainly focusing on first-year students but also extending help to second- and third-year students as needed.</p>
                         </div>
                         <div class="exp-box">
-                            <h3>Teaching  Assistent in Discrete Mathematics</h3>
+                            <h3>Teacher  Assistent in Discrete Mathematics</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
                             <p class="exp-date">Aug 2023 - Nov 2023</p>
-                            <p>Discrete Mathematics is an essential course in all computer science programs, often referred to as computer mathematics. It plays a vital role in enhancing students' programming skills and understanding of computer technology problems.<br> As a teaching assistant, I supported both students and teachers by guiding practice sessions, correcting obligatory assignments, and contributing to the overall progress of the course.</p>
+                            <p>Discrete Mathematics is an essential course in all computer science programs, often referred to as computer mathematics. It plays a vital role in enhancing students' programming skills and understanding of computer technology problems.<br> As a Teacher assistant, I supported both students and teachers by guiding practice sessions, correcting obligatory assignments, and contributing to the overall progress of the course.</p>
                         </div>
                         <div class="exp-box">
-                            <h3>Teaching  Assistent in Technology and Society for Programmers</h3>
+                            <h3>Teacher  Assistent in Technology and Society for Programmers</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
                             <p class="exp-date">Aug 2023 - Nov 2023</p>
-                            <p>Technology and Society for Programmers explores the impact of digital technology on work and society, covering topics like social media, digital governance, and eHealth. The course emphasizes understanding both the benefits and limitations of technology.<br> As a teaching assistant, I supported students and instructors by guiding practice sessions, facilitating discussions, and helping students communicate their understanding of key concepts.</p>
+                            <p>Technology and Society for Programmers explores the impact of digital technology on work and society, covering topics like social media, digital governance, and eHealth. The course emphasizes understanding both the benefits and limitations of technology.<br> As a Teacher assistant, I supported students and instructors by guiding practice sessions, facilitating discussions, and helping students communicate their understanding of key concepts.</p>
                         </div>
                     </div>
                 </div>
